@@ -1,3 +1,4 @@
+// CHECKSTYLE:OFF
 /*---------------------------------------------------------------------------
  * Copyright (C) 2006 Maxim Integrated Products, All Rights Reserved.
  *
@@ -26,7 +27,6 @@
  */
 package com.dalsemi.onewire.application.monitor;
 
-import java.util.Enumeration;
 import java.util.Vector;
 
 import com.dalsemi.onewire.OneWireException;
@@ -43,7 +43,7 @@ import com.dalsemi.onewire.utils.OWPath;
  * have two PIO pins (PIOA and PIOB). You can chain multiple devices together by
  * connecting PIOA of one part to PIOB of the next device. The first device in
  * the chain has its PIOB grounded.
- * 
+ *
  * This monitor performs a simple search. If a branch is activated/deactivated
  * between search cycles, this monitor will see the arrival/departure of new
  * devices without reference to the branch which they lie on.
@@ -58,26 +58,28 @@ public class ChainMonitor extends AbstractDeviceMonitor {
 	/**
 	 * Create a simple monitor that does not search branches
 	 *
-	 * @param the DSPortAdapter this monitor should search
+	 * @param adapter the DSPortAdapter this monitor should search
 	 */
 	public ChainMonitor(DSPortAdapter adapter) {
-		setAdapter(adapter);
+		this.setAdapter(adapter);
 	}
 
 	/**
 	 * Sets this monitor to search a new DSPortAdapter
 	 *
-	 * @param the DSPortAdapter this monitor should search
+	 * @param adapter the DSPortAdapter this monitor should search
 	 */
+	@Override
 	public void setAdapter(DSPortAdapter adapter) {
-		if (adapter == null)
+		if (adapter == null) {
 			throw new IllegalArgumentException("Adapter cannot be null");
+		}
 
-		synchronized (sync_flag) {
+		synchronized (this.sync_flag) {
 			this.adapter = adapter;
-			defaultPath = new OWPath(adapter);
+			this.defaultPath = new OWPath(adapter);
 
-			resetSearch();
+			this.resetSearch();
 		}
 	}
 
@@ -87,14 +89,14 @@ public class ChainMonitor extends AbstractDeviceMonitor {
 	 * @param address a Long object representing the address of the device
 	 * @return The OWPath representing the network path to the device.
 	 */
+	@Override
 	public OWPath getDevicePath(Long address) {
-		return defaultPath;
+		return this.defaultPath;
 	}
 
 	/**
 	 * chainOn sends the chain mode "ON" command sequence to all chain devices.
-	 * 
-	 * @param none
+	 *
 	 * @return true if successful, false otherwise
 	 */
 	public boolean chainOn() throws OneWireException, OneWireIOException {
@@ -102,33 +104,33 @@ public class ChainMonitor extends AbstractDeviceMonitor {
 		// send chain on command
 		//
 
-		boolean returnResult = false;
-		adapter.beginExclusive(true);
+		var returnResult = false;
+		this.adapter.beginExclusive(true);
 		// master issues a reset
-		adapter.reset();
+		this.adapter.reset();
 		// master issues a Skip Rom [0xCC]
-		adapter.putByte(0xCC);
+		this.adapter.putByte(0xCC);
 		// master issues Chain Mode command [0x99]
-		adapter.putByte(0x99);
+		this.adapter.putByte(0x99);
 		// master issues chain control byte ON [0x5A]
-		adapter.putByte(0x5A);
+		this.adapter.putByte(0x5A);
 		// master issues inverse of chain control byte ON
-		adapter.putByte(~0x5A);
+		this.adapter.putByte(~0x5A);
 		// master receives response: 0xAA success, or 0x00 error
-		if (adapter.getByte() != 0xAA) {
-			adapter.endExclusive();
+		if (this.adapter.getByte() != 0xAA) {
+			this.adapter.endExclusive();
 			return returnResult;
 		}
 		returnResult = true; // successful transmission of chain "ON" command
-		adapter.endExclusive();
+		this.adapter.endExclusive();
 		return returnResult;
 	}
 
 	/**
 	 * chainConditionalReadRom sends the chain mode "DONE" command sequence to
 	 * current chain device.
-	 * 
-	 * @param 8-byte array for chain 1-Wire net address
+	 *
+	 * @param chainDeviceAddress 8-byte array for chain 1-Wire net address
 	 * @return true if successful, false otherwise
 	 */
 	public boolean chainConditionalReadRom(byte[] chainDeviceAddress) throws OneWireException, OneWireIOException {
@@ -137,40 +139,39 @@ public class ChainMonitor extends AbstractDeviceMonitor {
 		//
 
 		// initialize 1-Wire net address buffer to zero
-		for (int i = 0; i < 8; i++) {
+		for (var i = 0; i < 8; i++) {
 			chainDeviceAddress[i] = 0;
 		}
 
-		boolean returnResult = false;
+		var returnResult = false;
 		// acquire adapter
-		adapter.beginExclusive(true);
+		this.adapter.beginExclusive(true);
 		// master transmits a reset
-		adapter.reset();
+		this.adapter.reset();
 		// master issues a Conditional Read ROM [0x0F]
-		adapter.putByte(0x0F);
+		this.adapter.putByte(0x0F);
 		// master receives 8 bytes of 1-Wire network address
-		for (int i = 0; i < 8; i++) {
-			chainDeviceAddress[i] = (byte) adapter.getByte();
+		for (var i = 0; i < 8; i++) {
+			chainDeviceAddress[i] = (byte) this.adapter.getByte();
 		}
-		adapter.endExclusive();
-		if (chainDeviceAddress[0] == (byte) 0x81)
+		this.adapter.endExclusive();
+		if (chainDeviceAddress[0] == (byte) 0x81) {
 			throw new OneWireException(
 					"This adapter's DS2401 ID chip interferes with chain mode.  Try another adapter.");
+		}
 
 		// check for error (if serial number is not a bunch of 0xFFs)
-		if ((chainDeviceAddress[0] == (byte) 0xFF) && (chainDeviceAddress[7] == (byte) 0xFF)) {
+		if (chainDeviceAddress[0] == (byte) 0xFF && chainDeviceAddress[7] == (byte) 0xFF) {
 			// error, so return false
 			return returnResult;
 		}
-		returnResult = true;
-		return returnResult;
+		return true;
 	}
 
 	/**
 	 * chainDone sends the chain mode "DONE" command sequence to current chain
 	 * device.
-	 * 
-	 * @param none
+	 *
 	 * @return true if successful, false otherwise
 	 */
 	public boolean chainDone() throws OneWireException, OneWireIOException {
@@ -178,32 +179,31 @@ public class ChainMonitor extends AbstractDeviceMonitor {
 		// send chain done command
 		//
 
-		boolean returnResult = false;
-		adapter.beginExclusive(true);
+		var returnResult = false;
+		this.adapter.beginExclusive(true);
 		// master issues reset
-		adapter.reset();
+		this.adapter.reset();
 		// master issues Resume command [0xA5]
-		adapter.putByte(0xA5);
+		this.adapter.putByte(0xA5);
 		// master issues Chain Mode command [0x99]
-		adapter.putByte(0x99);
+		this.adapter.putByte(0x99);
 		// master issues chain control byte DONE [0x96]
-		adapter.putByte(0x96);
+		this.adapter.putByte(0x96);
 		// master issues inverse of chain control byte DONE
-		adapter.putByte(~0x96);
+		this.adapter.putByte(~0x96);
 		// master receives response: 0xAA success, or 0x00 error
-		if (adapter.getByte() != 0xAA) {
-			adapter.endExclusive();
+		if (this.adapter.getByte() != 0xAA) {
+			this.adapter.endExclusive();
 			return returnResult;
 		}
 		returnResult = true; // successful transmission of chain "DONE" command
-		adapter.endExclusive();
+		this.adapter.endExclusive();
 		return returnResult;
 	}
 
 	/**
 	 * chainOff sends the chain mode "OFF" command sequence to all chain devices.
-	 * 
-	 * @param none
+	 *
 	 * @return true if successful, false otherwise
 	 */
 	public boolean chainOff() throws OneWireException, OneWireIOException {
@@ -211,25 +211,25 @@ public class ChainMonitor extends AbstractDeviceMonitor {
 		// send chain off command
 		//
 
-		boolean returnResult = false;
-		adapter.beginExclusive(true);
+		var returnResult = false;
+		this.adapter.beginExclusive(true);
 		// master issues reset
-		adapter.reset();
+		this.adapter.reset();
 		// master issues a skip rom command [0xCC]
-		adapter.putByte(0xCC);
+		this.adapter.putByte(0xCC);
 		// master issues Chain Mode command [0x99]
-		adapter.putByte(0x99);
+		this.adapter.putByte(0x99);
 		// master issues chain control byte OFF [0x3C]
-		adapter.putByte(0x3C);
+		this.adapter.putByte(0x3C);
 		// master issues inverse of chain control byte OFF
-		adapter.putByte(~0x3C); // bitwise complement of 0x3C
+		this.adapter.putByte(~0x3C); // bitwise complement of 0x3C
 		// master receives response: 0xAA success, or 0x00 error
-		if (adapter.getByte() != 0xAA) {
-			adapter.endExclusive();
+		if (this.adapter.getByte() != 0xAA) {
+			this.adapter.endExclusive();
 			return returnResult;
 		}
 		returnResult = true; // successful transmission of chain "OFF" command
-		adapter.endExclusive();
+		this.adapter.endExclusive();
 		return returnResult;
 	}
 
@@ -239,72 +239,79 @@ public class ChainMonitor extends AbstractDeviceMonitor {
 	 * @param arrivals   A vector of Long objects, represent new arrival addresses.
 	 * @param departures A vector of Long objects, represent departed addresses.
 	 */
+	@Override
 	public void search(Vector<Long> arrivals, Vector<Long> departures) throws OneWireException, OneWireIOException {
-		synchronized (sync_flag) {
+		synchronized (this.sync_flag) {
 			try {
-				byte[] chainDeviceAddress = new byte[8];
-				for (int i = 0; i < 8; i++) {
+				var chainDeviceAddress = new byte[8];
+				for (var i = 0; i < 8; i++) {
 					chainDeviceAddress[i] = 0;
 				}
 
 				// get exclusive use of 1-Wire network
-				adapter.beginExclusive(true);
+				this.adapter.beginExclusive(true);
 
 				// clear any previous search restrictions
-				adapter.setSearchAllDevices();
-				adapter.targetAllFamilies();
-				adapter.setSpeed(DSPortAdapter.SPEED_REGULAR);
-				adapter.endExclusive();
+				this.adapter.setSearchAllDevices();
+				this.adapter.targetAllFamilies();
+				this.adapter.setSpeed(DSPortAdapter.SPEED_REGULAR);
+				this.adapter.endExclusive();
 
 				// perform chain mode search
 				// send chain mode "ON" sequence
-				if (chainOn()) {
+				if (this.chainOn()) {
 					// loop on sending chain mode "Conditional Read ROM" until method returns false
-					while (chainConditionalReadRom(chainDeviceAddress)) {
-						Long longAddress = new Long(Address.toLong(chainDeviceAddress));
-						if (!deviceAddressHash.containsKey(longAddress) && arrivals != null)
+					while (this.chainConditionalReadRom(chainDeviceAddress)) {
+						var longAddress = Long.valueOf(Address.toLong(chainDeviceAddress));
+						if (!this.deviceAddressHash.containsKey(longAddress) && arrivals != null) {
 							arrivals.addElement(longAddress);
+						}
 
-						deviceAddressHash.put(longAddress, new Integer(max_state_count));
+						this.deviceAddressHash.put(longAddress, Integer.valueOf(this.max_state_count));
 						// send chain mode "DONE" sequence
-						if (!chainDone())
+						if (!this.chainDone()) {
 							throw new OneWireIOException(
 									"Transmission error occurred attempting to send chain control byte DONE.");
+						}
 					}
 					// send chain mode "OFF" sequence
-					if (!chainOff())
+					if (!this.chainOff()) {
 						throw new OneWireIOException(
 								"Transmission error occurred attempting to send chain control byte OFF.");
+					}
 				}
 			} finally {
-				adapter.endExclusive();
+				this.adapter.endExclusive();
 			}
 
 			// remove any devices that have not been seen
-			for (Enumeration<Long> device_enum = deviceAddressHash.keys(); device_enum.hasMoreElements();) {
-				Long longAddress = (Long) device_enum.nextElement();
+			for (var device_enum = this.deviceAddressHash.keys(); device_enum.hasMoreElements();) {
+				var longAddress = device_enum.nextElement();
 
 				// check for removal by looking at state counter
-				int cnt = ((Integer) deviceAddressHash.get(longAddress)).intValue();
+				var cnt = this.deviceAddressHash.get(longAddress).intValue();
 				if (cnt <= 0) {
-					deviceAddressHash.remove(longAddress);
-					if (departures != null)
+					this.deviceAddressHash.remove(longAddress);
+					if (departures != null) {
 						departures.addElement(longAddress);
+					}
 
 					synchronized (deviceContainerHash) {
 						deviceContainerHash.remove(longAddress);
 					}
 				} else {
 					// it stays
-					deviceAddressHash.put(longAddress, new Integer(cnt - 1));
+					this.deviceAddressHash.put(longAddress, Integer.valueOf(cnt - 1));
 				}
 			}
 
 			// fire notification events
-			if (arrivals != null && arrivals.size() > 0)
-				fireArrivalEvent(adapter, arrivals);
-			if (departures != null && departures.size() > 0)
-				fireDepartureEvent(adapter, departures);
+			if (arrivals != null && arrivals.size() > 0) {
+				this.fireArrivalEvent(this.adapter, arrivals);
+			}
+			if (departures != null && departures.size() > 0) {
+				this.fireDepartureEvent(this.adapter, departures);
+			}
 		}
 	}
 
@@ -319,16 +326,17 @@ public class ChainMonitor extends AbstractDeviceMonitor {
 			throws OneWireException, OneWireIOException {
 		OneWireContainer owd;
 		Long OneWireAddress;
-		Vector<OneWireContainer> containerVector = new Vector<>();
+		var containerVector = new Vector<OneWireContainer>();
 
 		// loop through all the 1-Wire devices found in arrivals list
-		adapter.beginExclusive(true);
-		for (int i = 0; i < arrivals.size(); i++) {
-			OneWireAddress = (Long) arrivals.elementAt(i);
-			owd = adapter.getDeviceContainer(OneWireAddress.longValue());
+		this.adapter.beginExclusive(true);
+		for (var i = 0; i < arrivals.size(); i++) {
+			OneWireAddress = arrivals.elementAt(i);
+			owd = this.adapter.getDeviceContainer(OneWireAddress.longValue());
 			containerVector.addElement(owd);
 		}
-		adapter.endExclusive();
+		this.adapter.endExclusive();
 		return containerVector;
 	}
 }
+// CHECKSTYLE:ON
